--- a/public/frontend/assets/css/contact-us.css
+++ b/public/frontend/assets/css/contact-us.css
@@ -45,7 +45,16 @@
       line-height: 28.8px;
       width: 100%;
       text-align: center;
+      transition: 0.5s all;
    }
+   .contact .contact__btn:hover{
+      background: linear-gradient(45deg, #7e91e5,  #384fb3 ,#515e98 ) !important ;
+      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3) !important ;
+      /* transform: translateY(-5px) !important; */
+      color: #fff !important;
+      border: none !important;
+      
+  } 
 
    .contact .contact__header h2,
    .contact>.contact__content {
