--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -101,7 +101,9 @@ a {
 
 
 }
-
+.navbar .navbar-btn-subscribe:hover {
+    opacity: 0.9;
+}
 .navbar .navbar-btn {
     border-radius: 50px;
     color: var(--white-color);
@@ -111,6 +113,7 @@ a {
     text-align: center;
     padding: 12px;
     min-width: 150px;
+    transition: 0.5s all;
 }
 
 .navbar .navbar-btn-login {
@@ -122,7 +125,10 @@ a {
     /* border-image: linear-gradient(to right, #00c6ff, #0072ff) 1; */
 
 }
-
+.navbar .navbar-btn-login:hover{
+     background: linear-gradient(90deg,#fdfdff 5.25%  , #fff 77.6% );
+   
+}
 
 .navbar .action-btns {
     gap: 8px;
@@ -271,8 +277,15 @@ a {
     line-height: 32px;
     text-align: center;
     color: #2f2f2f;
+    transition: 0.5s all;
 }
+.btn-work-with-us:hover{
+    /* background-color: rgb(29, 29, 248) !important; */
+    background: linear-gradient(103.82deg, #332FFF -0.68%, #FF3880 102.15%) !important;
 
+    color: #fff !important;
+  
+}
 @media (max-width: 992px) {
     .hero .hero-content h1 {
         font-size: 24px;
@@ -321,12 +334,15 @@ a {
     padding: 42px 0 12px 0;
     background-color: var(--white-color);
 }
+.footer .footer-txt{
+
+}
 
 .footer .left-content p {
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 600;
     line-height: 16.44px;
-    letter-spacing: 3px;
+  
 }
 
 .footer .social-icons {
