--- a/public/frontend/assets/css/terms-and-conditions.css
+++ b/public/frontend/assets/css/terms-and-conditions.css
@@ -30,7 +30,10 @@
 }
 
 
-
+/* .terms-and-conditions__body span {
+    margin: 0 10px !important;
+    font-size: 20px;
+} */
 /* content */
 .terms-and-conditions__body h1,
 .terms-and-conditions__body h2,
