--- a/public/frontend/assets/css/blog.css
+++ b/public/frontend/assets/css/blog.css
@@ -33,7 +33,7 @@
 .pagination {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 43px;
 }
 
 .pagination button {
@@ -103,5 +103,11 @@
 @media(max-width:992px){
     .blog-content{
         padding: 10px;
+    }
+
+
+    .pagination {
+      
+        margin-top: 19px;
     }
 }
